showmaf-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: maf

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: maf
  name: maf-server
  labels:
    app: maf-server
spec:
  template:
    spec:
      securityContext:
        supplementalGroups:
          - 4085
  replicas: 1
  selector:
    matchLabels:
      app: maf-server
  template:
    metadata:
      labels:
        app: maf-server
    spec:
      containers:
      - name: maf
        image: "ghcr.io/lsst/rubin_sim:main"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: "10Gi"
          requests:
            cpu: 500m
            memory: "8Gi"
        volumeMounts:
        - mountPath: /data/fbs_sims
          name: sdf-data-rubin
          subPath: shared/fbs_sims
      volumes:
      - name: sdf-data-rubin
        persistentVolumeClaim:
          claimName: sdf-data-rubin
---
apiVersion: v1
kind: Service
metadata:
  namespace: maf
  name: usdf-maf
  labels:
    app: maf-server
  annotations:
    metallb.universe.tf/address-pool: sdf-services
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: maf-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maf-ingress
  namespace: maf
  labels:
    app: maf-server
spec:
  ingressClassName: nginx
  rules:
  - host: usdf-maf.slac.stanford.edu
    http:
      paths:
      - backend:
          service:
            name: usdf-maf
            port:
              number: 80
        path: /
        pathType: Prefix
